--- a/index.html
+++ b/index.html
@@ -79,8 +79,77 @@
       </div>
     </section>
 
-    <section class="features-section"></section>
+    <!-- featuries section -->
+    <section class="features-section">
+      <div class="container">
+        <div class="features-header">
+          <h2 class="features-heading-text">
+            Your user research Swiss Army knife
+          </h2>
+          <a href="#" class="secondary-button"
+            >see all features <img src="images/asset 10.svg" alt=""
+          /></a>
+        </div>
 
+        <div class="features-area flex">
+          <div class="features-card flex">
+            <img class="features-card-logo" src="images/asset 11.svg" alt="" />
+            <h3>Card sorting</h3>
+            <p>Discover how people group and label information.</p>
+            <a class="secondary-button" href="#"
+              >Learn more <img src="images/asset 10.svg" alt=""
+            /></a>
+          </div>
+
+          <div class="features-card flex">
+            <img class="features-card-logo" src="images/asset 13.svg" alt="" />
+            <h3>Prototype tests</h3>
+            <p>Discover how people navigate your Figma prototypes.</p>
+            <a class="secondary-button" href="#"
+              >Learn more <img src="images/asset 10.svg" alt=""
+            /></a>
+          </div>
+
+          <div class="features-card flex">
+            <img class="features-card-logo" src="images/asset 14.svg" alt="" />
+            <h3>First click tests</h3>
+            <p>Test interaction with first click and navigation tests.</p>
+            <a class="secondary-button" href="#"
+              >Learn more <img src="images/asset 10.svg" alt=""
+            /></a>
+          </div>
+
+          <div class="features-card flex">
+            <img class="features-card-logo" src="images/asset 15.svg" alt="" />
+            <h3>Design surveys</h3>
+            <p>Get feedback on images, videos or audio files.</p>
+            <a class="secondary-button" href="#"
+              >Learn more <img src="images/asset 10.svg" alt=""
+            /></a>
+          </div>
+
+          <div class="features-card flex">
+            <img class="features-card-logo" src="images/asset 16.svg" alt="" />
+            <h3>Preference tests</h3>
+            <p>Find out which designs users prefer and why.</p>
+            <a class="secondary-button" href="#"
+              >Learn more <img src="images/asset 10.svg" alt=""
+            /></a>
+          </div>
+
+          <div class="features-card flex">
+            <img class="features-card-logo" src="images/asset 17.svg" alt="" />
+            <h3>Five second tests</h3>
+            <p>Test comprehensibility by measuring first impressions.</p>
+            <a class="secondary-button" href="#"
+              >Learn more <img src="images/asset 10.svg" alt=""
+            /></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    
     <section class="big-feature-section"></section>
     <section class="big-feature-section"></section>
     <section class="big-feature-section"></section>
@@ -89,6 +158,8 @@
     <section class="cta -section"></section>
     <footer></footer>
     <div class="subfooter"></div>
+
+    <div class="space" style="height: 100vh"></div>
     <script
       src="https://kit.fontawesome.com/9646117163.js"
       crossorigin="anonymous"
