--- a/index.html
+++ b/index.html
@@ -82,10 +82,8 @@
     <!-- featuries section -->
     <section class="features-section">
       <div class="container">
-        <div class="features-header">
-          <h2 class="features-heading-text">
-            Your user research Swiss Army knife
-          </h2>
+        <div class="features-header flex">
+          <h2>Your user research Swiss Army knife</h2>
           <a href="#" class="secondary-button"
             >see all features <img src="images/asset 10.svg" alt=""
           /></a>
@@ -149,20 +147,145 @@
       </div>
     </section>
 
-    
-    <section class="big-feature-section"></section>
-    <section class="big-feature-section"></section>
-    <section class="big-feature-section"></section>
+    <section class="big-feature-section">
+      <div class="container flex big-feature-container">
+        <div class="feature-img">
+          <img src="images/asset 18.png" alt="" />
+        </div>
+        <div class="feature-desc flex">
+          <h4 class="small-bold-text">Effortless validation for</h4>
+          <h3>Design professionals</h3>
+          <p>
+            Test interfaces, interaction flows, iconography and more, to help
+            you create intuitive and delightful experiences for your users.
+          </p>
+        </div>
+      </div>
+    </section>
 
-    <section class="examples-section"></section>
-    <section class="cta -section"></section>
-    <footer></footer>
-    <div class="subfooter"></div>
+    <section class="big-feature-section">
+      <div class="container flex big-feature-container">
+        <div class="feature-desc flex">
+          <h4 class="small-bold-text">Optimisation for</h4>
+          <h3>Marketers</h3>
+          <p>
+            Fine-tune landing pages, messaging, and creative, helping you
+            optimise conversion rates on marketing campaigns and product
+            launches.
+          </p>
+        </div>
+        <div class="feature-img">
+          <img src="images/asset 21.png" alt="" />
+        </div>
+      </div>
+    </section>
 
-    <div class="space" style="height: 100vh"></div>
-    <script
-      src="https://kit.fontawesome.com/9646117163.js"
-      crossorigin="anonymous"
-    ></script>
+    <section class="big-feature-section">
+      <div class="container flex big-feature-container">
+        <div class="feature-img">
+          <img src="images/asset 24.png" alt="" />
+        </div>
+        <div class="feature-desc flex">
+          <h4 class="small-bold-text">Easier decision making for</h4>
+          <h3>Product managers</h3>
+          <p>
+            Ensure you’re delivering the right features to the right customers
+            by validating product concepts with your target audience.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- example section -->
+    <section class="examples-section">
+      <div class="container">
+        <div class="examples-header flex">
+          <h2>One platform, endless possibilities</h2>
+          <a href="#" class="secondary-button"
+            >see more examples <img src="images/asset 10.svg" alt=""
+          /></a>
+        </div>
+        <div class="examples-area flex">
+          <a href="#" class="examples-card">
+            <h3 class="card-text">
+              Can users complete a task in my software interface?
+            </h3>
+          </a>
+
+          <a href="#" class="examples-card">
+            <h3 class="card-text">
+              Can users find important pages on my website?
+            </h3>
+          </a>
+
+          <a href="#" class="examples-card">
+            <h3 class="card-text">Is my website’s intended audience clear?</h3>
+          </a>
+
+          <a href="#" class="examples-card">
+            <h3 class="card-text">
+              Do visitors understand what a page is about?
+            </h3>
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <!-- cta section -->
+    <section class="cta-section">
+      <div class="container cta-section-container flex">
+        <h2>Start testing today</h2>
+        <p>Take the guesswork out of design decision</p>
+        <a href="#" class="primary-button">Get Started</a>
+      </div>
+    </section>
+
+    <!-- footer section -->
+    <footer>
+      <div class="container flex footer-container">
+        <a class="company-logo" href="#"
+          ><img src="images/asset 1.png" alt="compan logo"
+        /></a>
+
+        <div class="link-column flex">
+          <h4>Prodect</h4>
+          <a href="" class="hover-link">Overview</a
+          ><a href="" class="hover-link">Pricing</a
+          ><a href="" class="hover-link">UsabilityHub panel</a
+          ><a href="" class="hover-link">Customers</a
+          ><a href="" class="hover-link">Status page</a>
+        </div>
+
+        <div class="link-column flex">
+          <h4>Methodologies</h4>
+          <a href="" class="hover-link">Card sorting</a
+          ><a href="" class="hover-link">Prototype testing</a
+          ><a href="" class="hover-link">First click tests</a
+          ><a href="" class="hover-link">Preference tests</a
+          ><a href="" class="hover-link">Five second tests</a>
+        </div>
+
+        <div class="link-column flex">
+          <h4>Recources</h4>
+          <a href="" class="hover-link">Overview</a
+          ><a href="" class="hover-link">Pricing</a
+          ><a href="" class="hover-link">UsabilityHub panel</a
+          ><a href="" class="hover-link">Customers</a
+          ><a href="" class="hover-link">Status page</a>
+        </div>
+      </div>
+    </footer>
+
+    <!-- sub footer -->
+    <div class="subfooter">
+      <div class="container flex subfooter-container">
+        <a class="hover-link" href="">Privacy policy</a>
+        <a class="hover-link" href="">Terms & conditions</a>
+        <a class="hover-link" href="#">Security information</a>
+        <a class="hover-link" href="#"><i class="fa fa-brands fa-facebook"></i></a>
+        <a class="hover-link" href=""><i class="fa fa-bolds fa-twitter"></i></a>
+      </div>
+    </div>
+    <script src="https://kit.fontawesome.com/9646117163.js" crossorigin="anonymous"></script>
   </body>
 </html>
